<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical" android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <androidx.core.widget.NestedScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/dialog_edition_xy"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:src="@drawable/cover_xy" />

            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/dialog_edition_oras"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:src="@drawable/cover_oras" />

            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/dialog_edition_sm"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:src="@drawable/cover_sm" />

            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/dialog_edition_usum"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:src="@drawable/cover_usum" />

            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/dialog_edition_swsh"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:src="@drawable/cover_swsh" />

            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/dialog_edition_go"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:src="@drawable/cover_go" />

            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/dialog_edition_letsgo"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:src="@drawable/cover_letsgo" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>