...
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_new_pokemon_activity_spinner_hunt_methods"
            android:hint="@string/editText_pokemonName_hint">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/add_new_pokemon_activity_edittext_name"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="7dp"
                android:inputType="text" />
...
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_input_layout"
            app:layout_constraintBottom_toTopOf="@+id/add_new_pokemon_activity_button_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/autocomplete_input_layout"
            android:hint="@string/editText_encounter_hint">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_new_pokemon_activity_edittext_eggsNeeded"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:inputType="number" />

...
