<resources>
    <string name="app_name">ShinySammlung</string>
    <string name="action_settings">Einstellungen</string>

    <!-- navigation view -->
    <string name="num_shinys">Anzahl Shinys</string>
    <string name="num_shinys_eggs">Anzahl gezüchtet</string>
    <string name="num_shinys_sos">Anzahl SOS</string>
    <string name="num_eggs">Eier gesamt</string>
    <string name="avg_eggs">Eier durchschnittlich</string>

    <!-- recycler view item -->
    <string name="recycler_view_item_id">ID</string>
    <string name="recycler_view_item_name">Name</string>
    <string name="recycler_view_item_encounter">Begegnungen</string>
    <string name="recycler_view_item_hunt_method">Methode</string>

    <!-- AddNewPokemonActivity -->
    <string name="editText_pokemonName_hint">Name:</string>
    <string name="editText_encounter_hint">Begegnungen:</string>
    <string name="button_add_pokemon_text">Pokemon hinzuf\u00FCgen</string>

    <!-- menu item bar -->
    <string name="menu_delete">Pokemon löschen</string>
    <string name="menu_add">Pokemon hinzufügen</string>
    <string name="menu_random">Zufälliges Pokemon</string>

    <!-- navigation drawer options -->
    <string name="drawer_settings">Einstellungen</string>
    <string name="drawer_export_data">Daten exportieren</string>
    <string name="drawer_import_data">Daten importieren</string>
    <string name="drawer_sort_data">Pokemon sortieren</string>
    <string name="drawer_image_description">Bild des Lieblingspokemon</string>

    <!-- sort dialog -->
    <string name="sort_dialog_title">Sortieren nach:</string>
    <string name="sort_dialog_negative_button">Abbrechen</string>
    <string name="sort_dialog_positive_button">Bestätigen</string>
    <string name="dialog_sort_message">Wähle aus, nach welchem Kriterium die Pokemon sortiert werden sollen.</string>

    <!-- action mode -->
    <string name="action_mode_title">ausgewählt</string>

    <string name="title_activity_settings">Einstellungen</string>

    <string name="fragment_pokemondata_image_content_description">Bild des Shiny Pokemon</string>
    <string name="title_activity_addNewPokemon">Neues Pokemon hinzufügen</string>
    <string name="title_activity_edit_pokemon">Pokemon bearbeiten</string>
    <string name="avg_shinys_sos">SOS durchschnittlich</string>
    <string name="general">Allgemein</string>
    <string name="sort_automatically">Automatisches Sortieren</string>
    <string name="use_dark_mode">Dunkelmodus verwenden</string>
    <string name="sort_automatically_summary">Pokemon werden nach dem Hinzufügen automatisch sortiert</string>
    <string name="copied_data">Daten wurden in die Zwischenablage kopiert.</string>
    <string name="guide_add_pokemon">Pokemon hinzufügen</string>
    <string name="import_error">Konnte Daten aus der Zwischenablage nicht importieren.</string>
    <string name="export_error">Es gibt keine Daten zum Exportieren.</string>
    <string name="error_random_pokemon">Es gibt noch keine Pokemon.</string>
    <string name="checkbox_encounters_known">Anzahl der Begegnungen sind bekannt</string>
    <string name="import_success">Daten wurden erfolgreich geladen.</string>
    <string name="no_pokemon_added">Es wurde kein Pokemon hinzugefügt.</string>
    <string name="encounter_unknown">Begegnungen: Nicht bekannt</string>
    <string name="encounter_colon">Begegnungen:</string>
    <string name="method_colon">Methode:</string>
    <string name="error_empty_name">Der Name darf nicht leer sein!</string>
    <string name="error_is_not_a_pokemon">ist kein Pokemon!</string>
    <string name="error_encounter_lower_zero">Die Encounter müssen größer gleich 0 sein.</string>
    <string name="message_has_been_added">wurde hinzugefügt.</string>
    <string name="menu_decrease">Begegnungen um 1 verringern</string>
    <string name="menu_move_to_shiny_list">In die Shiny Liste verschieben</string>
    <string name="dialog_watch_out">Achtung</string>
    <string name="view_statistics">Statistiken ansehen</string>
    <string name="change_edition">Edition ändern</string>
    <string name="statistics">Statistik aller Shiny Pokemon</string>
    <string name="change_current_color_theme">Aktuelles Farbschema ändern</string>
    <string name="shiny_methode_textView_text">Shiny-Methode</string>
    <string name="edition_textView_text">Edition</string>
    <string name="edit_pokemon_data">Pokemon Daten bearbeiten</string>
    <string name="label_edit_pokemon_data">Pokemon Daten bearbeiten</string>
    <string name="edit_pokemon_button_save_text">Änderungen speichern</string>
    <string name="theme_orange">Orange</string>
    <string name="theme_purple">Violett</string>
    <string name="theme_blue">Blau</string>
    <string name="theme_red">Rot</string>
    <string name="dialog_action_canceled">Die Aktion wurde abgebrochen.</string>
    <string name="dialog_cancel">Abbrechen</string>
    <string name="dialog_yes">Ja</string>
    <string name="dialog_no">Nein</string>
    <string name="dialog_change_edition_title">Edition ändern</string>
    <string name="dialog_change_edition_message">Wähle, zu welcher Edition du wechseln möchtest</string>
    <string name="confirm_delete_dialog_message">soll für immer gelöscht werden?</string>
    <string name="dialog_edit_pokemon_data_title"> bearbeiten</string>
    <string name="dialog_message_enter_encounter">Du musst die Anzahl der Begegnungen eingeben.</string>
    <string name="dialog_message_unknown_error">Unerwarteter Fehler</string>
    <string name="dialog_message_saved_changes">Änderungen wurden gespeichert</string>
    <string name="dialog_message_compress_data">Sollen die Daten komprimiert werden?</string>
    <string name="enable_dark_mode">Dunklen Modus benutzen</string>
    <string name="guide_shiny_list_title">Die Shiny Liste</string>
    <string name="guide_shiny_list_description">In der Shiny Liste wirst du alle deine gefangenen Shiny Pokemon wiederfinden. Du kannst ihre Begegnungen nicht erhöhen oder verringern.</string>
    <string name="guide_breeding_title">Züchten</string>
    <string name="guide_breeding_description">Rechts neben der Shiny Liste befinden sich deine Shiny Wunschlisten. Hier fügst du Pokemon hinzu, die du Shiny-Hunten möchtest. Diese weiteren Listen ermöglichen dir es, deine Wunschpokemon je nach Shiny-Hunt Methode einzuordnen. Zum Beispiel in "Züchten" trägst du alle Pokemon ein, die du durch Zucht als Shiny bekommen möchtest. Analog funktionieren die anderen Listen rechts nebenan.</string>
    <string name="guide_add_pokemon_title">Pokemon hinzufügen</string>
    <string name="guide_add_pokemon_description">Füge hier ein Pokemon zu der Liste hinzu, in der du gerade bist. Probiere es doch gleich aus!</string>
    <string name="guide_random_pokemon_title">Zufälliges Pokemon auswählen</string>
    <string name="guide_random_pokemon_description">Hiermit kannst du ein zufälliges Pokemon aus der aktuellen Liste für dich auswählen lassen! Erhöhe dann die Anzahl seiner Begegnungen durch Klicken auf den Pokemoneintrag und sobald du das Shiny gefunden hast, halte lange auf den Eintrag gedrückt und verschiebe es in die Shiny Liste!</string>
    <string name="guide_pokemon_edition_title">Pokemon Edition</string>
    <string name="guide_pokemon_edition_description">Hier siehst du die aktuell ausgewählte Pokemon Edition. Wenn du Pokemon der Shiny Liste oder einer Wunschliste hinzufügst, werden sie in die hier angezeigte Edition gespeichert. So kannst du über mehrere Pokemon Spiele hinweg deine Shiny Pokemon verwalten.</string>
    <string name="internal_error">Interner Fehler</string>

    <!-- string arrays -->

    <!-- tabs titles -->
    <string-array name="tab_titles">
        <item>Shiny Liste</item>
        <item>Züchten</item>
        <item>SOS</item>
        <item>Softreset</item>
        <item>Anderes</item>
    </string-array>

    <!-- hunt methods -->
    <string-array name="hunt_methods">
        <item>Gezüchtet</item>
        <item>SOS-Methode</item>
        <item>Softreset</item>
        <item>Kontaktsafari</item>
        <item>Zufall</item>
        <item>DexNav</item>
        <item>Massenbegegnung</item>
        <item>PokeRadar</item>
        <item>RNGManipulation</item>
        <item>Chain Fishing</item>
        <item>Ultradimension</item>
        <item>Anderes</item>
    </string-array>

    <string-array name="pokemon_editions">
        <item>X/Y</item>
        <item>Omega-Rubin/Alpha-Saphir</item>
        <item>Sonne/Mond</item>
        <item>Ultrasonne/Ultramond</item>
        <item>Schwert/Schild</item>
        <item>Go</item>
        <item>Let\'s Go</item>
    </string-array>

    <string-array name="color_themes">
        <item>Orange</item>
        <item>Violett</item>
        <item>Blau</item>
        <item>Rot</item>
    </string-array>

    <!-- sort methods -->
    <string-array name="sort_methods">
        <item>Name</item>
        <item>Anzahl Begegnungen</item>
        <item>PokedexId</item>
        <item>Ursprüngliche Reihenfolge</item>
    </string-array>

</resources>
